WIP: implemented index update during import jobs. introduced systemUID for projects for mapping search index. [skip ci]